# venus

./: .cursorignore  .gitignore  1GCauxM3kepx1LAeaYWhFBD1mrC3kVACd  BRADM-INFERENCE-ID-AWARE-rebuttal-p2.ipynb  README.md  download_breadm.py  inference-merge-final-DECEMBER2024 (1) 2.ipynb  inference_dataset_aware_DECEMBER_2024_CLEAN.ipynb  inference_dataset_aware_breastdm.ipynb  inference_dataset_aware_private.ipynb  inference_private_DECEMBER_2024_CLEAN.ipynb  pyproject.toml  training_baselines_breastdm.ipynb  training_baselines_private.ipynb  training_monai-bradm-DECEMBER-2024-baselines (1) (1) (1) (2) (1).ipynb  training_monai_bradm_DECEMBER_2024_baselines_CLEAN.ipynb  training_monai_bradm_venus_DECEMBER_2024_CLEAN.ipynb  training_monai_fusion_DECEMBER_2024_CLEAN.ipynb  training_private_DECEMBER_2024_baselines_CLEAN.ipynb  training_private_DECEMBER_2024_venus_CLEAN.ipynb  training_venus_breastdm.ipynb  training_venus_private.ipynb  utiils.py
boundaryloss/: dataloader.py  losses.py  utils.py
breast_segmentation/: __init__.py  __main__.py
breast_segmentation/config/: settings.py
breast_segmentation/data/: __init__.py  collate_functions.py  dataset.py  private_dataset.py
breast_segmentation/inference/: __init__.py  breadm_dataset_aware_test.py  private_dataset_aware_test.py
breast_segmentation/metrics/: __init__.py  evaluation.py  losses.py  volume_metrics.py
breast_segmentation/models/: __init__.py  architectures.py  (+2 more)
download/: download-breadm.ipynb  download-private-dataset.ipynb
inference_results/: patient_aware_results_20250903_170324.json
(+65 files in other folders)
